# briefs-todo-app-starter

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitmoji.json  .hadolint.yml  .markdownlint.json  .prettierignore  .prettierrc  .yamllint.yml  AGENTS.md  CONTRIBUTING.md  README.md  commitlint.config.js  docker-compose.yml  mypy.ini  package.json
.github/: dependabot.yml  pull_request_template.md  settings.yml
.github/workflows/: dependabot-lockfile.yml  setup.yml
.husky/: commit-msg  pre-commit
.husky/_/: husky.sh
.vibe/: README.md
.vibe/commands/: deploy.json  docker.json  lint.json  system.json  test.json  todo.json
.vibe/mcp/: README.md  config.json
.vibe/mcp/servers/: list.json
.vibe/skills/docker/: skill.md
.vibe/skills/fastapi-sqlalchemy/: skill.md
.vibe/skills/security/: skill.md
.vibe/skills/sveltekit-tailwind/: skill.md
.vibe/skills/testing/: skill.md
.vibe/skills/todo-app/: skill.md
api/: .dockerignore  .env.example  Dockerfile  crud.py  database.py  dependency.py  main.py  models.py  mypy.ini  pyproject.toml  schemas.py
api/services/: progress.py
api/tests/: conftest.py  test_api.py  test_crud.py
docs/: AGENTS.md  COMPONENT_REFERENCE.md  CONVENTIONS.md  DESIGN_SYSTEM.md  FEATURES.md  PROJECT_STRUCTURE.md  SCREEN_FLOW.md  TASKS.md  TECHNICAL_GUIDE.md
docs/briefs/: agentic-coding.md  docker.md
docs/specs/ADR/: ADR-001-use-fastapi.md  ADR-002-use-sveltekit.md  ADR-TEMPLATE.md
docs/specs/API/: todos-api.yml
docs/specs/PRD/: PRD-001-docker.md  (+3 more)
web/: .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: app.html
web/tests/: api.test.ts  filter.test.ts
(+5 files in other folders)
