[project]
name = "todo-api"
version = "0.1.0"
description = "FastAPI To-Do API with SQLAlchemy and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
